pkg/kgateway/translator/gateway/testutils/outputs/route-replacement/strict/backendconfigpolicy/invalid-cipher-suites-out.yaml
Clusters:
- connectTimeout: 5s
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8443
  filterChains:
  - filterChainMatch:
      serverNames:
      - www.example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: https
        statPrefix: http
        useRemoteAddress: true
    name: https
  listenerFilters:
  - name: envoy.filters.listener.tls_inspector
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
  name: listener~8443
Routes:
- ignorePortInHostMatching: true
  name: https
  virtualHosts:
  - domains:
    - www.example.com
    name: https~www_example_com
    routes:
    - match:
        prefix: /
      name: https~www_example_com-route-0-httproute-test-route-gwtest-0-0-matcher-0
      route:
        cluster: kube_gwtest_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
  - domains:
    - '*'
    name: https~misdirected-request
    routes:
    - directResponse:
        status: 421
      match:
        prefix: /
Statuses:
  gateways:
    gwtest/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Successfully resolved all Gateway references
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: https
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    gwtest/test-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    BackendConfigPolicy/gwtest/invalid-cipher-policy:
      ancestors:
      - ancestorRef:
          group: ""
          kind: Service
          name: example-svc
          namespace: gwtest
        conditions:
        - lastTransitionTime: null
          message: 'invalid xds configuration: error initializing configuration ''/dev/fd/0'':
            Failed to initialize cipher suites BOGUS_CIPHER_SUITE_1:INVALID_AES_256_GCM_SHA384:FAKE_ECDHE_RSA_WITH_AES_128_CBC_SHA.
            The following ciphers were rejected when tried individually: BOGUS_CIPHER_SUITE_1,
            INVALID_AES_256_GCM_SHA384, FAKE_ECDHE_RSA_WITH_AES_128_CBC_SHA'
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: ""
          reason: Pending
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
